# homelab

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  .yamlfix.toml  .yamllint  README.md  app.yaml  catalog-info.yaml  docker-compose.yaml  kubeshark.yaml  renovate.json  vw.yaml
.crush/: crush.db-shm  crush.db-wal
.github/workflows/: argo-diff.yaml
ansible/: ansible.cfg  inventory.ini  picluster.yml
ansible/argocd/: main.yaml  main.yml
ansible/calico/: main.yml
ansible/k3s/: main.yml  teardown.yml
ansible/longhorn/: hosts.ini  readme.md  site.yml
ansible/picluster/: main.yaml  main.yml  teardown.yml
ansible/update/: main.yml
argocd/: README.md
argocd/actual-budget/: httproute.yaml  kustomization.yaml  secrets.yaml  service.yaml  statefulset.yaml
argocd/apps/dev/: Dockerfile  app-set.yaml  build.gradle  kustomization.yaml  pyproject.toml
argocd/apps/dev/bookinfo/: kustomization.yaml
argocd/apps/dev/bookinfo/networking/: fault-injection-details-v1.yaml
argocd/apps/dev/bookinfo/platform/kube/: bookinfo-certificate.yaml
argocd/apps/dev/bookinfo/src/productpage/: requirements.txt  test-requirements.txt
argocd/apps/dev/dollardollar/: kustomization.yaml
argocd/apps/dev/dollardollar-dev/manifests/: deploy.yaml  pull-secrets.yaml  secret-generator.yaml
argocd/apps/dev/dollardollar/manifests/: deploy.yaml  http-route.yaml  pull-secrets.yaml  secret-generator.yaml  svc.yaml
argocd/apps/dev/linkerd/: kustomization.yaml
argocd/apps/dev/linkerd/manifests/: cert.yaml  ns.yaml
argocd/apps/dev/nginx/: Chart.yaml  README.md  catalog-info.yaml  values.yaml
argocd/apps/dev/tekton/: tekton-dashboard-application.yaml  tekton-pipelines-application.yaml
argocd/apps/dev/tekton/tekton-dashboard-kustomize/: certificate.yaml  kustomization.yaml  nginx-proxy-patch.yaml  tekton-dashboard-ingress-patch.yaml
argocd/apps/dev/tekton/tekton-pipelines-kustomize/: kustomization.yaml  values.yaml
talos/: README.md
terraform/: README.md  argocd.tf
utils/: gpu-test.yaml  httpbin.yaml  nfs-test.yaml  sleep-pod-init.yaml  sleep-pod.yaml
(+1427 files in other folders)
