[project]
name = "web"
version = "1"
description = ""
requires-python = "<3.11,>=3.9"
dependencies = [
    "django-sql-explorer==3.0",
    "XlsxWriter==1.0.0",
    "django-prometheus==2.3.1",
    "Django==5.1.6",
    "Jinja2==3.1.4",
    "markupsafe==2.0.1",
    "django-csp==3.8",
    "django-colorful==1.2",
    "django-passwords",
    "djangorestframework==3.14.0",
    "drf-nested-routers==0.93.4",
    "drf-yasg==1.21.8",
    "geoip2==2.7.0",
    "django-storages==1.12.3",
    "influxdb==4.1.1",
    "channels==3.0.4",
    "msgpack==1.0.3",
    "channels-redis==3.4.0",
    "asgiref==3.8.1",
    "svglib==1.0.1",
    "whitenoise==6.2.0",
    "pyparsing>=3.0.9,<4",
    "django-cte>=1.3.0,<2",
    "python3-saml==1.9.0",
    "phonenumbers==8.8.5",
    "oauthlib==3.2.2",
    "django-migration-linter==4.1.0",
    "django-deprecate-fields==0.1.1",
    "Pillow==10.4.0",
    "django-stubs-ext==4.2.7",
    "ipython>=8.14.0,<9",
    "django-debug-toolbar==3.2.4",
    "django-extensions==3.2.3",
    "django-fake-model==0.1.4",
    "django-filter==21.1",
    "django-formtools==2.3",
    "django-reversion==5.0.12",
    "jprops==2.0.2",
    "jsonfield==3.1.0",
    "django-model-utils==4.2.0",
    "boto3==1.34.19",
    "django-cache-memoize==0.1.10",
    "oci==2.6.1",
    "msrestazure==0.5.0",
    "google-api-python-client==2.8.0",
    "google-cloud-storage==1.29.0",
    "pyvcloud==23.0.4",
    "pandas==1.3.5",
    "numpy==1.22.3",
    "google-cloud-monitoring==2.9.1",
    "packer.py==0.3.0",
    "celery[redis]==5.3.1",
    "datadog==0.45.0",
    "dj-database-url==0.5.0",
    "django-flags==5.0.13",
    "gunicorn",
    "django-redis==5.2.0",
    "redis==4.6.0",
    "sentry-sdk==1.45.1",
    "paramiko==3.4.0",
    "aws-xray-sdk>=2.11.0,<3",
    "jsonschema==3.2.0",
    "py-spy>=0.3.14,<0.4",
    "invoke==1.7.0",
    "setproctitle==1.2.2",
    "rescale-python-sdk",
    "cryptography==42.0.4",
    "mypy==1.7.1",
    "ua-parser==0.15.0",
]
